# -CSA-lab3

./: README.md  isa.py  lab3-task.md  machine.py  pyproject.toml  pytest.ini  translator.py
.github/workflows/: python.yaml  python.yml
examples/inputs/: cat.txt  hello_user_name.txt
examples/machine_codes/: cat.json  hello.json  hello_user_name.json  prob2.json  test.json
examples/src/: cat.asm  hello.asm  hello_user_name.asm  prob2.asm  test.asm
golden/: cat.yml  hello.yml  hello_user_name.yml  prob2.yml  test.yml
