[tool.poetry]
name = "csa-lab3"
version = "0.1.0"
description = "A toy processor with its own programming language and translator"
authors = ["Daniil Kalinin <dan_kalinin_03@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
